pmd/src/net/sourceforge/pmd/jsp/ast/JspParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. JspParser.java */
/** 
 * JSP Parser for PMD.
 * @author Pieter – Application Engineers NV/SA – http://www.ae.be
 */

package net.sourceforge.pmd.jsp.ast;

public class JspParser/*@bgen(jjtree)*/implements JspParserTreeConstants, JspParserConstants {/*@bgen(jjtree)*/
  protected JJTJspParserState jjtree = new JJTJspParserState();
        /**
	 * Return the contents of a quote.
	 * @param quote String - starting and ending with " or '
	 * @return String a substring of quote: quote without the first and list
	 * character.
	 */
        private static String quoteContent(String quote) {
                return quote.substring(1, quote.length()-1);
        }

        /**
	 * Return the contents of a EL expression or a Value Binding expression.
	 * @param expression String - starting with ${ or #{ and ending with }
	 * @return String a substring of expression: expression without the first two and list
	 * characters.
	 */
        private static String expressionContent(String expression) {
                return expression.substring(2, expression.length()-1).trim();
        }

/** ******************************************************************** */
/** *************************  JSP GRAMMAR  **************************** */
/** ******************************************************************** */

/**
 * The root of the AST of a JSP.
 */
  final public ASTCompilationUnit CompilationUnit() throws ParseException {
 /*@bgen(jjtree) CompilationUnit */
  ASTCompilationUnit jjtn000 = new ASTCompilationUnit(this, JJTCOMPILATIONUNIT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Prolog();
      Content();
      jj_consume_token(0);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

/**
 * The optional prolog of a JSP, including (xml) declarations and DTD.
 */
  final public void Prolog() throws ParseException {
    if (jj_2_1(2147483647)) {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMENT_START:
        case JSP_COMMENT_START:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMENT_START:
          CommentTag();
          break;
        case JSP_COMMENT_START:
          JspComment();
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      Declaration();
    } else {
      ;
    }
    if (jj_2_2(2147483647)) {
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMENT_START:
        case JSP_COMMENT_START:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMENT_START:
          CommentTag();
          break;
        case JSP_COMMENT_START:
          JspComment();
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      DoctypeDeclaration();
    } else {
      ;
    }
  }

/**
 * Everything between a start-tag and the corresponding end-tag of an element.
 */
  final public void Content() throws ParseException {
 /*@bgen(jjtree) Content */
  ASTContent jjtn000 = new ASTContent(this, JJTCONTENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EL_EXPRESSION:
      case UNPARSED_TEXT:
        Text();
        break;
      case TAG_START:
      case COMMENT_START:
      case CDATA_START:
      case JSP_COMMENT_START:
      case JSP_DECLARATION_START:
      case JSP_EXPRESSION_START:
      case JSP_SCRIPTLET_START:
      case JSP_DIRECTIVE_START:
        ContentElementPossiblyWithText();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TAG_START:
        case COMMENT_START:
        case CDATA_START:
        case JSP_COMMENT_START:
        case JSP_DECLARATION_START:
        case JSP_EXPRESSION_START:
        case JSP_SCRIPTLET_START:
        case JSP_DIRECTIVE_START:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_3;
        }
        ContentElementPossiblyWithText();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * A single (non-text) element that can occur between a start- and end-tag of an element.
 * Possibly followed by text.
 */
  final public void ContentElementPossiblyWithText() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMENT_START:
      CommentTag();
      break;
    case TAG_START:
      Element();
      break;
    case CDATA_START:
      CData();
      break;
    case JSP_COMMENT_START:
      JspComment();
      break;
    case JSP_DECLARATION_START:
      JspDeclaration();
      break;
    case JSP_EXPRESSION_START:
      JspExpression();
      break;
    case JSP_SCRIPTLET_START:
      JspScriptlet();
      break;
    case JSP_DIRECTIVE_START:
      JspDirective();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EL_EXPRESSION:
    case UNPARSED_TEXT:
      Text();
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
  }

  final public void JspDirective() throws ParseException {
 /*@bgen(jjtree) JspDirective */
        ASTJspDirective jjtn000 = new ASTJspDirective(this, JJTJSPDIRECTIVE);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(JSP_DIRECTIVE_START);
      t = jj_consume_token(JSP_DIRECTIVE_NAME);
                                   jjtn000.setName(t.image);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case JSP_DIRECTIVE_ATTRIBUTE_NAME:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_4;
        }
        JspDirectiveAttribute();
      }
      jj_consume_token(JSP_DIRECTIVE_END);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void JspDirectiveAttribute() throws ParseException {
 /*@bgen(jjtree) JspDirectiveAttribute */
        ASTJspDirectiveAttribute jjtn000 = new ASTJspDirectiveAttribute(this, JJTJSPDIRECTIVEATTRIBUTE);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(JSP_DIRECTIVE_ATTRIBUTE_NAME);
                                             jjtn000.setName(t.image);
      jj_consume_token(JSP_DIRECTIVE_ATTRIBUTE_EQUALS);
      t = jj_consume_token(JSP_DIRECTIVE_ATTRIBUTE_VALUE);
                                              jjtree.closeNodeScope(jjtn000, true);
                                              jjtc000 = false;
                                              jjtn000.setValue(quoteContent(t.image));
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void JspScriptlet() throws ParseException {
 /*@bgen(jjtree) JspScriptlet */
        ASTJspScriptlet jjtn000 = new ASTJspScriptlet(this, JJTJSPSCRIPTLET);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(JSP_SCRIPTLET_START);
      t = jj_consume_token(JSP_SCRIPTLET);
                              jjtn000.setImage(t.image.trim());
      jj_consume_token(JSP_SCRIPTLET_END);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void JspExpression() throws ParseException {
 /*@bgen(jjtree) JspExpression */
        ASTJspExpression jjtn000 = new ASTJspExpression(this, JJTJSPEXPRESSION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(JSP_EXPRESSION_START);
      t = jj_consume_token(JSP_EXPRESSION);
                               jjtn000.setImage(t.image.trim());
      jj_consume_token(JSP_EXPRESSION_END);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void JspDeclaration() throws ParseException {
 /*@bgen(jjtree) JspDeclaration */
        ASTJspDeclaration jjtn000 = new ASTJspDeclaration(this, JJTJSPDECLARATION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(JSP_DECLARATION_START);
      t = jj_consume_token(JSP_DECLARATION);
                                jjtn000.setImage(t.image.trim());
      jj_consume_token(JSP_DECLARATION_END);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void JspComment() throws ParseException {
 /*@bgen(jjtree) JspComment */
        ASTJspComment jjtn000 = new ASTJspComment(this, JJTJSPCOMMENT);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(JSP_COMMENT_START);
      t = jj_consume_token(JSP_COMMENT_CONTENT);
                                    jjtn000.setImage(t.image.trim());
      jj_consume_token(JSP_COMMENT_END);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
 * This production groups all characters between two tags, where
 * tag is an xml-tag "<...>" or a jsp-page-tag "<%...%>" or CDATA "<![CDATA[...]]>".
 * Text consists of unparsed text and/or Expression Language expressions.
 */
  final public void Text() throws ParseException {
 /*@bgen(jjtree) Text */
        ASTText jjtn000 = new ASTText(this, JJTTEXT);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);StringBuffer content = new StringBuffer();
        String tmp;
    try {
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case UNPARSED_TEXT:
          tmp = UnparsedText();
                                       content.append(tmp);
          break;
        case EL_EXPRESSION:
          tmp = ElExpression();
                                       content.append(tmp);
          break;
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EL_EXPRESSION:
        case UNPARSED_TEXT:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_5;
        }
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.setImage(content.toString());
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public String UnparsedText() throws ParseException {
 /*@bgen(jjtree) UnparsedText */
  ASTUnparsedText jjtn000 = new ASTUnparsedText(this, JJTUNPARSEDTEXT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(UNPARSED_TEXT);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                jjtn000.setImage(t.image);
                {if (true) return t.image;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }
